--- a/main/plugins/org.talend.core.ui/src/main/java/messages.properties
+++ b/main/plugins/org.talend.core.ui/src/main/java/messages.properties
@@ -613,3 +613,10 @@ WorkspaceDlg.browse.folder.title=Select a workspace folder
 WorkspaceDlg.use.this.as.default.cb.message=&Use this workspace as the default and do not ask again
 PerspectiveMenuManager.dummy=Dummy
 PerspectiveMenuManager.perspectiveLabel=&Perspective
+I18nPreferencePage.needRestart=Local Language(need restart)
+I18nPreferencePage.translationInformation=Test translation with Babili (works only for current language,other language selection needs restart)
+I18nPreferencePage.importBabili=Import Translation from Babili
+I18nPreferencePage.restart=Restart
+I18nPreferencePage.restartButton=Need to restart to take effect.
+I18nPreferencePage.restoreDefault=Restore default
+I18nPreferencePage.wait_process=Process will hold on several minutes, please wait...
